--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -6,12 +6,12 @@ on:
   branches: [master]
 jobs:
     build:
-      runs-on: ubuntu-latest
+      runs-on: windows-latest
       steps:
         - uses: actions/checkout@v2
         - name: Use Node.js version 16
           uses: actions/setup-node@v2
           with:
-            node-version: '16'
+            node-version: '16.13.0'
         - run: npm install
         - run: npm run build --prefix client
