--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "concurrently \"set BUILD_PATH=../server/public&& npm install\" \"react-scripts build\"",
+    "build": "concurrently \"set BUILD_PATH=../server/public&& npm install && react-scripts build\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
