--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -8,11 +8,12 @@ jobs:
     build:
       env:
         CI: true
+        MONGO_URL: mongodb://localhost/nasa
       strategy:
         matrix:
             node-version: [14.x , 16.x]
             mongodb-version: ['4.4']
-      runs-on: windows-latest
+      runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v2
         - name: Use Node.js version ${{matrix.node-version}}
