--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "arwes": "^1.0.0-alpha.5",
     "concurrently": "^8.2.0",
+    "nasa-project": "file:..",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
