--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "install-server": "npm install --prefix server",
     "install-client": "npm install --prefix client",
-    "install": "concurrently \"cd server && npm install --prefix server\" \"cd client && npm install --prefix client\"",
+    "install": "concurrently \"npm install --prefix server && npm install --prefix client\"",
     "server": "npm run watch --prefix server",
     "client": "npm start --prefix client",
-    "watch": "concurrently \"npm run server\" \"npm run client\"",
+    "watch": "concurrently \"npm run server && npm run client\"",
     "deploy": "npm run build --prefix client && npm start --prefix server",
     "deploy-cluster": "npm run build --prefix client && npm run cluster --prefix server",
     "test": "npm test --prefix server && npm test --prefix client"
