--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,6 @@
   "private": true,
   "dependencies": {
     "arwes": "^1.0.0-alpha.5",
-    "concurrently": "^8.2.0",
-    "nasa-project": "file:..",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
@@ -13,8 +11,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "concurrently \"set BUILD_PATH=../server/public&& npm install && react-scripts build\"",
-    "test": "react-scripts test --passWithNoTests",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
