--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "install-server": "cd server && npm install",
     "install-client": "cd client && npm install",
-    "install":"npm run install-server && npm run install-client", 
+    "install":"npm run install-client && npm run install-server", 
     "server": "npm run watch --prefix server",
     "client": "npm start --prefix client",
     "watch": "concurrently \"npm run server && npm run client\"",
